objects/Auto_Product_Config__c/fields/Type_A_Service_of_Hydrant_System__c.field-meta.xml
<CustomField>
    <fullName>Type_A_Service_of_Hydrant_System__c</fullName>
    <label>Type A Service of Hydrant System</label>
    <length>15</length>
    <type>Text</type>
</CustomField>