objects/Auto_Product_Config__c/fields/Type_Inspection_Test_of_Panic_Alarm__c.field-meta.xml
<CustomField>
    <fullName>Type_Inspection_Test_of_Panic_Alarm__c</fullName>
    <label>Type - Inspection &amp; Test of Panic Alarm</label>
    <length>20</length>
    <type>Text</type>
</CustomField>