objects/Auto_Product_Config__c/fields/Valve_Control_Safety_Pin__c.field-meta.xml
<CustomField>
    <fullName>Valve_Control_Safety_Pin__c</fullName>
    <label>Valve Control Safety Pin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>