objects/Auto_Product_Config__c/fields/Valve_Sealing_Units_64mm__c.field-meta.xml
<CustomField>
    <fullName>Valve_Sealing_Units_64mm__c</fullName>
    <label>Valve Sealing Units 64mm</label>
    <length>15</length>
    <type>Text</type>
</CustomField>