objects/Auto_Product_Config__c/fields/Valve_Sealing_Units__c.field-meta.xml
<CustomField>
    <fullName>Valve_Sealing_Units__c</fullName>
    <label>Valve Sealing Units</label>
    <length>15</length>
    <type>Text</type>
</CustomField>