objects/Auto_Product_Config__c/fields/WSP_Lubrication__c.field-meta.xml
<CustomField>
    <fullName>WSP_Lubrication__c</fullName>
    <label>WSP Lubrication</label>
    <length>50</length>
    <type>Text</type>
</CustomField>