objects/Auto_Product_Config__c/fields/X16w_2D_Emergency_Light__c.field-meta.xml
<CustomField>
    <fullName>X16w_2D_Emergency_Light__c</fullName>
    <label>16w 2D Emergency Light</label>
    <length>20</length>
    <type>Text</type>
</CustomField>