objects/Auto_Product_Config__c/fields/X28w_2D_Emergency_Light_c_w_P_C__c.field-meta.xml
<CustomField>
    <fullName>X28w_2D_Emergency_Light_c_w_P_C__c</fullName>
    <label>28w 2D Emergency Light c/w P/C</label>
    <length>20</length>
    <type>Text</type>
</CustomField>