objects/Auto_Product_Config__c/fields/X38w_2D_Emergency_Light__c.field-meta.xml
<CustomField>
    <fullName>X38w_2D_Emergency_Light__c</fullName>
    <label>38w 2D Emergency Light</label>
    <length>20</length>
    <type>Text</type>
</CustomField>