objects/Auto_Product_Config__c/fields/X3hr_2_x_20w_Beam_Light_rep__c.field-meta.xml
<CustomField>
    <fullName>X3hr_2_x_20w_Beam_Light_rep__c</fullName>
    <label>3hr 2 x 20w Beam Light rep.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>