objects/Auto_Product_Config__c/fields/X6L_New_Equipment_To_Be_Dispatched__c.field-meta.xml
<CustomField>
    <fullName>X6L_New_Equipment_To_Be_Dispatched__c</fullName>
    <label>New Equipment To Be Dispatched</label>
    <length>20</length>
    <type>Text</type>
</CustomField>