objects/Auto_Product_Config__c/fields/X6L_Water_Condemned__c.field-meta.xml
<CustomField>
    <fullName>X6L_Water_Condemned__c</fullName>
    <label>Condemned</label>
    <length>20</length>
    <type>Text</type>
</CustomField>