objects/Auto_Product_Config__c/fields/X6L_Water_New_Equipment_Left_On_Site__c.field-meta.xml
<CustomField>
    <fullName>X6L_Water_New_Equipment_Left_On_Site__c</fullName>
    <label>New Equipment Left On-Site</label>
    <length>20</length>
    <type>Text</type>
</CustomField>