objects/Auto_Product_Config__c/fields/X6L_Water_Qty__c.field-meta.xml
<CustomField>
    <fullName>X6L_Water_Qty__c</fullName>
    <label>Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>