objects/Auto_Product_Config__c/fields/X6L_Water_Re_Charged__c.field-meta.xml
<CustomField>
    <fullName>X6L_Water_Re_Charged__c</fullName>
    <label>Re-Charged</label>
    <length>20</length>
    <type>Text</type>
</CustomField>