objects/Auto_Product_Config__c/fields/X6L_Water_Service_Exchange__c.field-meta.xml
<CustomField>
    <fullName>X6L_Water_Service_Exchange__c</fullName>
    <label>Service Exchange</label>
    <length>20</length>
    <type>Text</type>
</CustomField>