objects/Auto_Product_Config__c/fields/X8w_3hr_Exit_rep_incl_Legend_Legend__c.field-meta.xml
<CustomField>
    <fullName>X8w_3hr_Exit_rep_incl_Legend_Legend__c</fullName>
    <label>8w 3hr Exit rep. incl Legend  Legend</label>
    <length>20</length>
    <type>Text</type>
</CustomField>